# ml_pipeline

./: .gitignore  README.md  pyproject.toml  todo.rst
configs/: conf.yaml
docs/: configuration.rst  module.rst
examples/: 01_CreateData.ipynb  02_RunMLPipeline.ipynb  03_Results.ipynb  clean.sh  msft.yaml  msft_beglst.yaml  run.py
mlpipeline/: __init__.py  binning.py  fit.py  plots.py  preprocessing.py  util.py
modules/: binning.py  fit.py  util.py
scripts/: 01_CreateData.ipynb  msft.parq  run.py
templates/: classification.yaml  classification_ts.yaml  environment.yaml
